--- a/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
+++ b/Zbang.Zbox.Infrastructure/Zbang.Zbox.Infrastructure.csproj
@@ -257,6 +257,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Enums\Resources\Gamification.he.resx" />
     <EmbeddedResource Include="Enums\Resources\Gamification.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Gamification.Designer.cs</LastGenOutput>
