--- a/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
+++ b/Zbang.Cloudents.Mvc4WebRole/Zbang.Cloudents.Mvc4WebRole.csproj
@@ -1413,6 +1413,7 @@
     <Content Include="Images\Site\itemIcons.svg" />
     <Content Include="Images\Site\icons.svg" />
     <Content Include="Images\Site\social-icons.svg" />
+    <Content Include="Images\Site\stars-bg.png" />
     <Content Include="Images\Site\stars.png" />
     <Content Include="Images\Site\leaderboard-bg.png" />
     <Content Include="Images\Site\uploadIcons.svg" />
