Box search complete bug 7004

--- a/Zbang.Zbox.Infrastructure.Transport/Zbang.Zbox.Infrastructure.Transport.csproj
+++ b/Zbang.Zbox.Infrastructure.Transport/Zbang.Zbox.Infrastructure.Transport.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BadItemData.cs" />
     <Compile Include="BadPostData.cs" />
     <Compile Include="BoxFileProcessData.cs" />
+    <Compile Include="BoxProcessData.cs" />
     <Compile Include="ChangeEmailData.cs" />
     <Compile Include="BaseMailData.cs" />
     <Compile Include="DeleteBoxData.cs" />
