--- a/Zbang.Zbox.WorkerRoleSearch/packages.config
+++ b/Zbang.Zbox.WorkerRoleSearch/packages.config
@@ -2,6 +2,13 @@
 <packages>
   <package id="Autofac" version="4.1.1" targetFramework="net451" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.Azure.Common" version="2.0.4" targetFramework="net451" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net451" />
