Added application insight to web role

--- a/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
@@ -20,6 +20,8 @@
                  name="AzureDiagnostics">
           <filter type="" />
         </add>
+        <add name="myAppInsightsListener" type="Microsoft.ApplicationInsights.TraceListener.ApplicationInsightsTraceListener, Microsoft.ApplicationInsights.TraceListener" />
+
       </listeners>
     </trace>
   </system.diagnostics>
