--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -3,6 +3,7 @@
   <package id="AjaxMin" version="4.97.4951.28483" targetFramework="net45" />
   <package id="Angular.Material" version="1.1.1" targetFramework="net451" />
   <package id="Angular.UI.UI-Router" version="0.3.1" targetFramework="net451" />
+  <package id="angular-applicationinsights" version="0.2.8" targetFramework="net451" />
   <package id="angular-google-analytics.TypeScript.DefinitelyTyped" version="0.7.9" targetFramework="net451" />
   <package id="AngularJS.Animate" version="1.5.8" targetFramework="net451" />
   <package id="AngularJS.Aria" version="1.5.8" targetFramework="net451" />
@@ -26,7 +27,16 @@
   <package id="jQuery" version="2.2.0" targetFramework="net451" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net451" />
-  <package id="log4net" version="2.0.3" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
