Implement api change.
back version route
fix some issue.

--- a/Zbang.Cloudents.MobileApp/Zbang.Cloudents.MobileApp.csproj
+++ b/Zbang.Cloudents.MobileApp/Zbang.Cloudents.MobileApp.csproj
@@ -284,6 +284,8 @@
     <Compile Include="Filters\EmailVerifyAttribute.cs" />
     <Compile Include="Filters\JsonSerializeAttribute.cs" />
     <Compile Include="Filters\ZboxAuthorizeAttribute.cs" />
+    <Compile Include="Models\VersionConstraint.cs" />
+    <Compile Include="Models\VersionedRoute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="TraceExceptionLogger.cs" />
