--- a/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
+++ b/Zbang.Cloudents.Mvc4WebRole/Web.Release.config
@@ -12,6 +12,7 @@
   <appSettings>
     <add key="DataCache" value="AzureMVC1" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
     <add key="StudentUnionToAddId" value="64805" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
+    <add key="SearchProduction" value="true" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
   <system.diagnostics xdt:Transform="Replace">
     <trace>
