--- a/Zbang.Cloudents.MobileApp/packages.config
+++ b/Zbang.Cloudents.MobileApp/packages.config
@@ -7,6 +7,14 @@
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net451" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
