--- a/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
+++ b/Zbang.Zbox.ViewModel/Zbang.Zbox.ViewModel.csproj
@@ -138,7 +138,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\Boxes\GetUserWithFriendQuery.cs" />
-    <Compile Include="Queries\Dashboard\LeaderBoardQuery.cs" />
+    <Compile Include="Queries\Dashboard\LeaderboardQuery.cs" />
     <Compile Include="Queries\Emails\BaseDigestLastUpdateQuery.cs" />
     <Compile Include="Queries\Emails\GetBoxesLastUpdateQuery.cs" />
     <Compile Include="Queries\Emails\GetBoxLastUpdateQuery.cs" />
@@ -157,7 +157,7 @@
     <Compile Include="Queries\GetInviteDetailQuery.cs" />
     <Compile Include="Queries\GetItemQuery.cs" />
     <Compile Include="Queries\GetFileSeoQuery.cs" />
-    <Compile Include="Queries\GetLeaderBoardQuery.cs" />
+    <Compile Include="Queries\GetBoxLeaderboardQuery.cs" />
     <Compile Include="Queries\GetQuizQuery.cs" />
     <Compile Include="Queries\GetQuizSeoQuery.cs" />
     <Compile Include="Queries\GetUserByEmailQuery.cs" />
