--- a/Zbang.Cloudents.Connect/packages.config
+++ b/Zbang.Cloudents.Connect/packages.config
@@ -5,6 +5,14 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="jQuery" version="3.1.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
