Flashcard get in mobile service

--- a/Zbang.Cloudents.MobileApp/Web.config
+++ b/Zbang.Cloudents.MobileApp/Web.config
@@ -32,6 +32,7 @@
     <add key="CacheUse" value="true" />
     <add key="AzureSeachServiceName" value="cloudents" />
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
+    <add key="documentDbProduction" value="true"/>
   <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" /></appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
