--- a/Zbang.Zbox.Infrastructure/packages.config
+++ b/Zbang.Zbox.Infrastructure/packages.config
@@ -4,5 +4,6 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NHibernate" version="4.1.0.4000" targetFramework="net451" />
+  <package id="NTextCat" version="0.2.1.30" targetFramework="net451" />
   <package id="StackExchange.Redis" version="1.1.608" targetFramework="net451" />
 </packages>
