--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -39,6 +39,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net451\RestSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,11 +53,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HomeWorkIntent.cs" />
+    <Compile Include="JoinGroupIntent.cs" />
     <Compile Include="LuisAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterIoc.cs" />
+    <Compile Include="ResearchIntent.cs" />
+    <Compile Include="StudyExamIntent.cs" />
+    <Compile Include="WitAi.cs" />
+    <Compile Include="WitClient.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
