--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeWorkIntent.cs" />
+    <Compile Include="IWitAi.cs" />
     <Compile Include="JoinGroupIntent.cs" />
     <Compile Include="LuisAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="StudyExamIntent.cs" />
     <Compile Include="WitAi.cs" />
     <Compile Include="WitClient.cs" />
+    <Compile Include="WitResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -71,6 +73,14 @@
     <ProjectReference Include="..\Zbang.Zbox.Infrastructure.Ioc\Zbang.Zbox.Infrastructure.Ioc.csproj">
       <Project>{872878fa-a84a-4cd3-856a-4ee9018819c5}</Project>
       <Name>Zbang.Zbox.Infrastructure.Ioc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zbang.Zbox.Infrastructure\Zbang.Zbox.Infrastructure.csproj">
+      <Project>{3e0f1fbf-60d1-40b2-b649-933142c27cb7}</Project>
+      <Name>Zbang.Zbox.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Zbang.Zbox.ViewModel\Zbang.Zbox.ViewModel.csproj">
+      <Project>{BC85A7BD-262D-43E0-8D9D-EE76C602BFAF}</Project>
+      <Name>Zbang.Zbox.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
