--- a/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
+++ b/Zbang.Zbox.Infrastructure.Ai/Zbang.Zbox.Infrastructure.Ai.csproj
@@ -54,9 +54,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HomeWorkIntent.cs" />
+    <Compile Include="IAi.cs" />
+    <Compile Include="IIntent.cs" />
     <Compile Include="IWitAi.cs" />
     <Compile Include="JoinGroupIntent.cs" />
-    <Compile Include="LuisAi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterIoc.cs" />
     <Compile Include="ResearchIntent.cs" />
